tests/neg/tag-value.stk
type Sheep = #Sheep(origin: String)
type Cow   = #Cow(origin: String)
type Tiger = #Tiger(origin: String)
type Wolf  = #Wolf(origin: String)

type Herbivore = Sheep | Cow
type Carnivore = Tiger | Wolf
type Animal = Herbivore | Carnivore

type Sanglier = #Sanglier(origin: String)

type ErrorUnion = Int | Tiger // error
type ErrorUnion2 = #abType | #abEFType // error

fun showHerbivore(h: Herbivore): String =
  match h
    case s: Sheep => "Sheep: " + s.origin
    case s: Sanglier => "Sanglier: " + s.origin // error
    case c: Cow => "Cow: " + c.origin

fun showCarnivore(c: Carnivore): String =
  match c                                      // error
    case t: Tiger => "Tiger: " + t.origin

fun showAnimal(a: Animal): String =
  match a
    case h: Herbivore => showHerbivore h
    case c: Carnivore => showCarnivore c

fun main =
  val c = #Cow "Europe"
  val t = #Tiger "Asian"
  val w = #Wolf "Italy"
  val s = #Sheep "Ireland"

  println (showAnimal c)
  println (showHerbivore c)

  println (showAnimal t)
  println (showCarnivore t)

  println (showAnimal w)
  println (showCarnivore w)

  println (showAnimal s)
  println (showHerbivore s)
